; ModuleID = '/home/carl/AnghaBench/poco/Foundation/wcelibcex-1.0/src/extr_wce_directorymanagement.c_InitCwd.c'
source_filename = "/home/carl/AnghaBench/poco/Foundation/wcelibcex-1.0/src/extr_wce_directorymanagement.c_InitCwd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Cwd = common dso_local global i64* null, align 8
@_MAX_PATH = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @InitCwd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @InitCwd() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64*, align 8
  %3 = load i64*, i64** @Cwd, align 8
  %4 = getelementptr inbounds i64, i64* %3, i64 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %36

8:                                                ; preds = %0
  %9 = load i64*, i64** @Cwd, align 8
  %10 = load i32, i32* @_MAX_PATH, align 4
  %11 = call i32 @GetModuleFileName(i32* null, i64* %9, i32 %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %15, label %13

13:                                               ; preds = %8
  %14 = call i32 (...) @GetLastError()
  store i32 %14, i32* @errno, align 4
  store i32 %14, i32* %1, align 4
  br label %36

15:                                               ; preds = %8
  %16 = load i64*, i64** @Cwd, align 8
  %17 = call i64* @wcsrchr(i64* %16, i8 signext 92)
  store i64* %17, i64** %2, align 8
  %18 = load i64*, i64** %2, align 8
  %19 = icmp ne i64* %18, null
  br i1 %19, label %23, label %20

20:                                               ; preds = %15
  %21 = load i64*, i64** @Cwd, align 8
  %22 = call i64* @wcsrchr(i64* %21, i8 signext 47)
  store i64* %22, i64** %2, align 8
  br label %23

23:                                               ; preds = %20, %15
  %24 = load i64*, i64** %2, align 8
  %25 = icmp ne i64* %24, null
  br i1 %25, label %26, label %35

26:                                               ; preds = %23
  %27 = load i64*, i64** %2, align 8
  %28 = load i64*, i64** @Cwd, align 8
  %29 = icmp eq i64* %27, %28
  br i1 %29, label %30, label %33

30:                                               ; preds = %26
  %31 = load i64*, i64** %2, align 8
  %32 = getelementptr inbounds i64, i64* %31, i32 1
  store i64* %32, i64** %2, align 8
  br label %33

33:                                               ; preds = %30, %26
  %34 = load i64*, i64** %2, align 8
  store i64 0, i64* %34, align 8
  br label %35

35:                                               ; preds = %33, %23
  store i32 0, i32* %1, align 4
  br label %36

36:                                               ; preds = %35, %13, %7
  %37 = load i32, i32* %1, align 4
  ret i32 %37
}

declare dso_local i32 @GetModuleFileName(i32*, i64*, i32) #1

declare dso_local i32 @GetLastError(...) #1

declare dso_local i64* @wcsrchr(i64*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
